--- a/series.yml
+++ b/series.yml
@@ -21,6 +21,7 @@ series:
     - Inn The Works
     - The Lost Kitchen
     - Loot
+    - Virgin River
 
     - She-Hulk Attorney at Law
     - Andor
