--- a/config.yml
+++ b/config.yml
@@ -75,7 +75,7 @@ tasks:
     exec:
       on_exit:
         phase:
-          - sh /home/pi/.flexget/movies.sh
+          - cd /home/pi/.flexget && while read in; do flexget movie-list add "$in"; done < movies.txt && > movies.txt
 
 # Search for movies
   download-movies:
