--- a/config.yml
+++ b/config.yml
@@ -77,9 +77,31 @@ tasks:
         phase:
           - cd /home/pi/.flexget && while read in; do flexget movie-list add "$in"; done < movies.txt && > movies.txt
 
+# Check for new releases
+  check-new-movies:
+    priority: 6
+    imdb_lookup: yes
+    trakt_list:
+      username: giladg
+      list: latest-releases
+      type: movies
+      strip_dates: yes
+    imdb:
+      min_score: 6.5
+      min_votes: 5000
+      accept_mpaa_ratings:
+        - G
+        - PG
+        - PG-13
+    exec:
+      on_exit:
+        phase:
+#          - cd /home/pi/.flexget && while read in; do flexget movie-list add "$in"; done < movies.txt && > movies.txt
+          - echo "{{ title }}"
+
 # Search for movies
   download-movies:
-    priority: 6
+    priority: 7
     quality: webrip+
     discover:
       release_estimations: loose
