--- a/series.yml
+++ b/series.yml
@@ -20,11 +20,10 @@ series:
     - Where We Call Home
     - Inn The Works
     - The Lost Kitchen
-    - Loot
 
+    - Surface
     - She-Hulk Attorney at Law
     - Andor
-    - Paper Girls
     - The Sandman
 
 
