--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,10 @@ tasks:
     exec:
       on_exit:        
         phase:
-          - cd /home/ryan/flexget/ && git pull > /dev/null 2>&1
-          - cd /home/ryan/flexget/ && git add * > /dev/null 2>&1
-          - cd /home/ryan/flexget/ && git commit -m "update" > /dev/null 2>&1
-          - cd /home/ryan/flexget/ && git push origin main > /dev/null 2>&1
+          - cd 'c:\Users\ryan\flexget' & git pull
+          - cd 'c:\Users\ryan\flexget' & git add *
+          - cd 'c:\Users\ryan\flexget' & git commit -m "update"
+          - cd 'c:\Users\ryan\flexget' & git push origin main
 
 # Cleanvid (https://github.com/mmguero/cleanvid) new files.
   moveSeries:
@@ -24,38 +24,31 @@ tasks:
     parsing:
       series: guessit
     filesystem:
-      path: /mnt/d/Download/series
+      path: 'd:\Download'
       recursive: yes
       retrieve: files
       regexp: '.*\.(avi|mkv|mp4)$'
     move:
-      to: "/mnt/d/Series/{{tvmaze_series_name}}"
-      rename: "{{tvmaze_series_name|escape|replace('&#39;', '')|pathscrub}} - {{series_id}}{% if tvmaze_episode_name|default(False) %} - {{tvmaze_episode_name|pathscrub}}{% endif %}{% if quality|default(False) %} - [{{quality}}]{% endif %}"
+      to: 'd:\Series\{{series_name}}'
+      rename: "{{series_name|escape|replace('&#39;', '')|pathscrub}} - {{series_id}}{% if tvmaze_episode_name|default(False) %} - {{tvmaze_episode_name|pathscrub}}{% endif %}{% if quality|default(False) %} - [{{quality}}]{% endif %}"
     accept_all: yes
     exec:
       on_output:
         for_accepted:
-          - /home/ryan/.local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /mnt/d/Scripts/swears.txt -e
+          - cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w 'd:\Scripts\swears.txt' -e
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi
 
 # Showrss profile rss
   showrss:
     priority: 3
-    magnets: yes
-    convert_magnet:
-      timeout: 10 seconds
-      force: yes
     rss: https://showrss.info/user/247283.rss?magnets=true&namespaces=true&name=null&quality=anyhd&re=yes
     all_series: yes
-    download: /mnt/d/Download/series
+    qbittorrent: 
+      path: 'd:\Download\series\{{series_name}}'
 
 # Other series/anime from the series.yml file
   otherrss:
     priority: 3
-    magnets: yes
-    convert_magnet:
-      timeout: 10 seconds
-      force: yes
     include: series.yml
     inputs:
       - rss: { url: 'https://eztv.re/ezrss.xml', silent: yes }
@@ -63,4 +56,5 @@ tasks:
       - rss: { url: 'https://torrentgalaxy.to/rss?cat=41', silent: yes }
       - rss: { url: 'https://nyaa.si/?page=rss&q=s0&c=1_2&f=0', silent: yes }
       - rss: { url: 'https://rarbg.to/rssdd.php?category=1;18;41;49', silent: yes }
-    download: /mnt/d/Download/series
+    qbittorrent: 
+      path: 'd:\Download\series\{{series_name}}'
