--- a/series.yml
+++ b/series.yml
@@ -6,7 +6,6 @@ series:
     - Made in Abyss
     - Yuru Camp
     - Kaguya-sama wa Kokurasetai
-    - Lycoris Recoil
     
 # Not yet on showrss
 
@@ -23,6 +22,10 @@ series:
     - Surface
     
     - Andor
+    - Quantum Leap 2022
+    - Cyberpunk Edgerunners
+    - Alaska Daily
+    - The English
 
   settings:
     shows:
