--- a/config.yml
+++ b/config.yml
@@ -48,6 +48,7 @@ tasks:
     include: series.yml
     inputs:
       - rss: { url: 'https://eztv.re/ezrss.xml', silent: yes }
+      - rss: https://eztv.unblockit.cat/ezrss.xml
       - rss: { url: 'https://www.limetorrents.info/rss/20/', silent: yes }
       - rss: { url: 'https://torrentgalaxy.to/rss?cat=41', silent: yes }
       - rss: { url: 'https://rarbg.to/rssdd.php?category=1;18;41;49', silent: yes }
