--- a/series.yml
+++ b/series.yml
@@ -1,8 +1,14 @@
 series:
   shows:
+  
+# anime in s00e00 format  
+    - Spy x Family
+    - Made in Abyss
+    - Yuru Camp
+    - Kaguya-sama wa Kokurasetai
+    - Lycoris Recoil
     
 # Not yet on showrss
-
     - Gardeners World
     - Night Sky
     - Sanditon
