--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ tasks:
       on_exit:        
         phase:
           - cd /home/pi/.flexget/ && git pull > /dev/null 2>&1
-          - cd /home/pi/.flexget/ && git add config.yml series.yml > /dev/null 2>&1
+          - cd /home/pi/.flexget/ && git add config.yml series.yml history.log > /dev/null 2>&1
           - cd /home/pi/.flexget/ && git commit -m "update" > /dev/null 2>&1
           - cd /home/pi/.flexget/ && git push origin main > /dev/null 2>&1
 
@@ -26,6 +26,7 @@ tasks:
         for_accepted:
           - /home/pi/.local/bin/cleanvid -i "{{location}}" -o "{{location}}_clean.mkv" -w /home/pi/swears.txt -e
           - if [ -f "{{location}}_clean.mkv" ]; then rm "{{location}}"; else echo "nothing to clean"; fi
+          - sed -i '1i {{title}}' /home/pi/.flexget/history.log
       on_exit:
         phase: find /home/pi/series/ -name "*.srt" -type f -delete > /dev/null 2>&1
 
@@ -50,7 +51,6 @@ tasks:
       - rss: https://torrentgalaxy.to/rss?cat=41
       - rss: https://rarbg.to/rssdd.php?category=1;18;41;49
       - rss: https://nyaa.si/?page=rss&q=s0&c=1_2&f=0
-
     transmission:
       host: 192.168.1.15
       port: 9091
