--- a/config.yml
+++ b/config.yml
@@ -93,14 +93,13 @@ tasks:
     exec:
       on_output:
         for_accepted:
-          - sed -i '1i {{title}} <br> {{url}} <br>' /home/pi/.flexget/README.md
+          - sed -i "1i {{title}} <br> {{url}} <br>" /home/pi/.flexget/README.md
       on_exit:
         phase:
           - echo "# $(date +%m-%d-%Y)" | cat - /home/pi/.flexget/README.md > temp && mv temp /home/pi/.flexget/README.md
     accept_all: yes
     inputs:
     #tech
-      - rss: https://github.com/osmoscraft/osmosfeed/releases.atom
       - rss: https://www.reddit.com/r/sysadmin/top.rss?t=week
       - rss: https://www.reddit.com/r/apple/top.rss?t=week
       - rss: https://www.bleepingcomputer.com/feed/
