--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-hacker
 title: tinykings
 description: feed updates
 timezone: America/Los_Angeles
+
+#todo - reset readme each month
