--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minima
+minima:
+  skin: dark
 title: tinykings
 description: feed updates
 timezone: America/Los_Angeles
