--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: minima
 minima:
   skin: dark
+  date_format: "%b %-d, %Y"
 title: tinykings
 description: feed updates
 timezone: America/Los_Angeles
