--- a/config.yml
+++ b/config.yml
@@ -93,11 +93,11 @@ tasks:
     exec:
       on_output:
         for_accepted:
-          - sed -i "1i {{title}} <br> [{{url}}]({{url}}) <br><br>" /home/pi/.flexget/README.md
+          - sed -i "1i {{title}} <br> [{{url}}]({{url}}) <br> `{{rss_pubdate}}` <br> *{{description}}* <br><br>" /home/pi/.flexget/README.md
 #      on_exit:
 #        phase:
 #          - echo "### $(date +%m-%d-%Y)" | cat - /home/pi/.flexget/README.md > temp && mv temp /home/pi/.flexget/README.md
-#    delay: 3 hours
+    delay: 3 hours
     accept_all: yes
     inputs:
     #tech
